--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,7 +25,6 @@
     "no-extra-bind": "warn",
     "no-implicit-globals": "error",
     "no-loop-func": "warn",
-    "no-param-reassign": "on",
     "no-unmodified-loop-condition": "error",
     "radix": "warn",
     "vars-on-top": "warn",
@@ -92,12 +91,10 @@
         },
         "while": {
           "after": true
-        },
-        "function": {
-          "after": true
         }
       }
     }],
+    "space-before-function-paren": ["error", "always"],
     "linebreak-style": "off",
     "lines-around-comment": ["off", {
       "beforeBlockComment": true,
@@ -124,6 +121,8 @@
     "arrow-body-style": ["warn", "as-needed"],
     "arrow-parens": ["off", "as-needed"],
     "arrow-spacing": "error",
-    "no-const-assign": "error"
+    "no-const-assign": "error",
+    "global-require": "warn",
+    "block-spacing": ["warn", "always"]
   }
 }
